name:                WVille
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WVille#readme
license:             BSD3
license-file:        LICENSE
author:              Rinat Stryungis
maintainer:          lazybonesxp@gmail.com
copyright:           2017 Rinat Stryungis
category:            time-frequency, parallelism
build-type:          Simple
extra-source-files:  README.md
Cabal-version:       >= 1.8
Tested-with:         GHC >= 8.0.1

Flag llvm-ptx
  Description:          Use LLVM.PTX backend
  Default:              True

Flag llvm-cpu
  Description:          Use LLVM.Native backend
  Default:              True

library
  hs-source-dirs:      src
  exposed-modules:     ParseArgs, ParseFile
  build-depends:       base >= 4.7 && < 5, 
                       text, 
                       wigner-ville-accelerate, 
                       attoparsec, 
                       optparse-applicative  
  default-language:    Haskell2010

executable WVille
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:         base >= 4.7 && < 5, 
                         directory, 
                         accelerate >= 1.2.0.0, 
                         accelerate-io, 
                         text, 
                         double-conversion, 
                         vector, 
                         wigner-ville-accelerate >= 0.1.0.3, 
                         attoparsec,
                         WVille

  if flag(llvm-cpu)
    cpp-options:        -DACCELERATE_LLVM_NATIVE_BACKEND
    build-depends:       accelerate-llvm-native >= 1.2.0.0
  if flag(llvm-ptx)
    cpp-options:        -DACCELERATE_LLVM_PTX_BACKEND
    build-depends:  
                         accelerate-llvm-ptx >= 1.2.0.0
  default-language:    Haskell2010

test-suite WVille-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/WVille